# qkh

./: Makefile  main.py  pyproject.toml
VD_games/: Makefile  cli.py  engine.py  pyproject.toml  pyproject.tomlv
VD_games/VD_games/scripts/: VD_even.py
VD_games/games/: calc.py  gcd.py
VD_games/scripts/: VD_calc.py  VD_gcd.py  VD_main.py
VD_games/vd_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
qkh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
