[project]
name = "qkh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]
[project.scripts]
vd-main = "VD_games.scripts.VD_games:main"
vd-calc = "VD_games.scripts.VD_calc:main"
vd-gcd = "VD_games.scripts.VD_gcd:main"
[tool.uv]
package = true

